// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must encode custom styles 1`] = `
[
  {
    "length": 4,
    "offset": 0,
    "style": "foo",
  },
  {
    "length": 2,
    "offset": 2,
    "style": "bar",
  },
  {
    "length": 2,
    "offset": 4,
    "style": "BOLD",
  },
]
`;

exports[`must encode for a complex styled document 1`] = `
[
  {
    "length": 4,
    "offset": 0,
    "style": "BOLD",
  },
  {
    "length": 2,
    "offset": 5,
    "style": "BOLD",
  },
  {
    "length": 2,
    "offset": 8,
    "style": "BOLD",
  },
  {
    "length": 3,
    "offset": 5,
    "style": "ITALIC",
  },
  {
    "length": 1,
    "offset": 9,
    "style": "ITALIC",
  },
  {
    "length": 3,
    "offset": 7,
    "style": "UNDERLINE",
  },
]
`;

exports[`must encode for a flat styled document 1`] = `
[
  {
    "length": 20,
    "offset": 0,
    "style": "BOLD",
  },
]
`;

exports[`must encode for a flat styled document 2`] = `
[
  {
    "length": 20,
    "offset": 0,
    "style": "BOLD",
  },
  {
    "length": 20,
    "offset": 0,
    "style": "ITALIC",
  },
]
`;

exports[`must encode for a flat styled document 3`] = `
[
  {
    "length": 20,
    "offset": 0,
    "style": "BOLD",
  },
  {
    "length": 20,
    "offset": 0,
    "style": "ITALIC",
  },
  {
    "length": 20,
    "offset": 0,
    "style": "UNDERLINE",
  },
]
`;

exports[`must encode for an unstyled document 1`] = `[]`;

exports[`must encode for an unstyled document 2`] = `[]`;

exports[`must encode for an unstyled document 3`] = `[]`;

exports[`must encode for an unstyled document 4`] = `[]`;

exports[`must encode for strings with surrogate pairs 1`] = `
[
  {
    "length": 4,
    "offset": 4,
    "style": "BOLD",
  },
  {
    "length": 8,
    "offset": 6,
    "style": "ITALIC",
  },
]
`;
